--- a/AdminPortal/src/app/adddynamicpage/adddynamicpage.component.html
+++ b/AdminPortal/src/app/adddynamicpage/adddynamicpage.component.html
@@ -43,6 +43,13 @@
                   </div>
                 </div>
                 <div class="col-md-12">
+                  <div class="form-group form-black label-floating">
+                    <label class="control-label">Sequence</label>
+                    <input class="validate" type="text" name="Sequence" #Sequence="ngModel"
+                      [(ngModel)]="Mailtemplate.Sequence" class="form-control" required>
+                  </div>
+                </div>
+                <div class="col-md-12">
                   <mat-form-field>
                     <mat-label>Page Type</mat-label>
                     <mat-select [(ngModel)]="Mailtemplate.ptype" name="pageTypeOption" required>
