admin panel ui changes

--- a/AdminPortal/src/app/components/sidebar/sidebar.component.html
+++ b/AdminPortal/src/app/components/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <div class="logo">
     <a href="http://distone.com" target="_blank" class="simple-text">
         <div class="logo-img">
-            <img src="/assets/img/D1-logo-NIFMSE2017-500px.png" />
+            <img src="assets/img/BRP-Logo-White.png" />
         </div>
-        Admin Portal
+        <span class="sidebar-admin-txt">Admin Portal</span>
     </a>
 </div>
 <div class="sidebar-wrapper">
