--- a/AdminPortal/src/app/productdetails/addproduct.component.html
+++ b/AdminPortal/src/app/productdetails/addproduct.component.html
@@ -17,7 +17,7 @@
             <mat-tab label="Item Doc Details">
               <div class="card-content table-responsive table-mobile">
                 <button style="float: right;" (click)="openDialog(memRefNo,0,itemId,'','','')"
-                  class="btn btn-success">Add New</button>
+                  class="btn btn-danger">Add New</button>
                 <div *ngIf="productDetails != null && productDetails != 'undefined' &&  productDetails.length > 0">
                   <table class="custom-table">
                     <thead class="text-info">
