--- a/AdminPortal/src/app/productdetails/productlist.component.html
+++ b/AdminPortal/src/app/productdetails/productlist.component.html
@@ -11,7 +11,7 @@
                                     <p class="category">Manage your Products</p>
                                 </td>
                                 <td style="text-align: right;">
-                                    <button (click)="onEditconf(0)" class="btn btn-success">Add New</button>
+                                    <button (click)="onEditconf(0)" class="btn btn-danger">Add New</button>
                                 </td>
                             </tr>
                         </table>
