--- a/AdminPortal/src/app/user-list/user-list.component.html
+++ b/AdminPortal/src/app/user-list/user-list.component.html
@@ -13,7 +13,7 @@
                                     <p class="category" *ngIf="userType == 'Client'">Manage customer users</p>
                                 </td>
                                 <td style="text-align: right;">
-                                    <button (click)="OnAddUser()" class="btn btn-success">Add New</button>
+                                    <button (click)="OnAddUser()" class="btn btn-danger">Add New</button>
                                 </td>
                             </tr>
                         </table>
