--- a/AdminPortal/src/app/user-management/headerlinks/headerlinks.component.html
+++ b/AdminPortal/src/app/user-management/headerlinks/headerlinks.component.html
@@ -11,7 +11,7 @@
                                     <p class="category">Manage your Header Links</p>
                                 </td>
                                 <td style="text-align: right;">
-                                    <button (click)="OnAddheaderlink()" class="btn btn-success">Add New</button>
+                                    <button (click)="OnAddheaderlink()" class="btn btn-danger">Add New</button>
 
                                 </td>
                             </tr>
