--- a/AdminPortal/src/app/user-management/mailbox-config/mailbox-config.component.html
+++ b/AdminPortal/src/app/user-management/mailbox-config/mailbox-config.component.html
@@ -10,7 +10,7 @@
                                     <h4 class="title">Mailbox Configuration</h4>
                                     <p class="category">Manage your email configuration</p>
                                 </td>
-                                <td style="text-align: right;"><button (click)="oncreatenew()" class="btn btn-success">Add New</button></td>
+                                <td style="text-align: right;"><button (click)="oncreatenew()" class="btn btn-danger">Add New</button></td>
                             </tr>
                         </table>
                     </div>
