--- a/AdminPortal/src/app/user-management/safiltersortlist/safiltersortlist.component.html
+++ b/AdminPortal/src/app/user-management/safiltersortlist/safiltersortlist.component.html
@@ -12,10 +12,7 @@
                                     <p class="category">Manage your Sorting List</p>
                                 </td>
                                 <td style="text-align: right;">
-                                    <button (click)="onEditconf(0)" class="btn btn-success">Add New</button>
-                                    <!-- <a (click)="OnAddheaderlink()" style="cursor: pointer;">
-              <i class="material-icons small" style="position: relative;bottom: 52px;left: 520px;">add_circle</i>
-            </a> -->
+                                    <button (click)="onEditconf(0)" class="btn btn-danger">Add New</button>
                                 </td>
                             </tr>
                         </table>
