--- a/AdminPortal/src/app/components/navbar/navbar.component.html
+++ b/AdminPortal/src/app/components/navbar/navbar.component.html
@@ -7,40 +7,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <!-- <a class="navbar-brand" href="#">{{getTitle()}}</a> -->
         </div>
         <div class="collapse navbar-collapse hoverNavbar">
             <ul class="nav navbar-nav navbar-right">
-                <!-- <li>
-                    <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="material-icons">dashboard</i>
-                        <p class="hidden-lg hidden-md">Dashboard</p>
-                    </a>
-                </li> -->
-                <!--<li class="dropdown">
-                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="material-icons">notifications</i>
-                         <span class="notification">5</span> 
-                        <p class="hidden-lg hidden-md">Notifications</p>
-                    </a> -->
-                    <!-- <ul class="dropdown-menu">
-                        <li>
-                            <a href="#">Mike John responded to your email</a>
-                        </li>
-                        <li>
-                            <a href="#">You have 5 new tasks</a>
-                        </li>
-                        <li>
-                            <a href="#">You're now friend with Andrew</a>
-                        </li>
-                        <li>
-                            <a href="#">Another Notification</a>
-                        </li>
-                        <li>
-                            <a href="#">Another One</a>
-                        </li>
-                    </ul> 
-                </li>-->
                 <li>
                     <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="material-icons">person</i>
@@ -53,17 +22,7 @@
                     </ul>
                 </li>
             </ul>
-
-            <!-- <form class="navbar-form navbar-right" role="search">
-                <div class="form-group form-black is-empty">
-                    <input type="text" class="form-control" placeholder="Search">
-                    <span class="material-input"></span>
-                </div>
-                <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                    <i class="material-icons">search</i>
-                    <div class="ripple-container"></div>
-                </button>
-            </form> -->
+            <span class="welcomtxt nav navbar-nav navbar-right"> Welcome Admin !</span>
         </div>
     </div>
 </nav>
