--- a/AdminPortal/src/app/user-management/Add-Banners/Add-Banners.component.html
+++ b/AdminPortal/src/app/user-management/Add-Banners/Add-Banners.component.html
@@ -11,7 +11,7 @@
                                     <p class="category">Manage your Home Page Banners</p>
                                 </td>
                                 <td style="text-align: right;">
-                                    <button (click)="OnAddheaderlink()" class="btn btn-success">Add New</button>
+                                    <button (click)="OnAddheaderlink()" class="btn btn-danger">Add New</button>
                                     <!-- <a (click)="OnAddheaderlink()" style="cursor: pointer;">
               <i class="material-icons small" style="position: relative;bottom: 52px;left: 520px;">add_circle</i>
             </a> -->
