bulk upload functionality

--- a/AdminPortal/src/app/productdetails/productlist.component.css
+++ b/AdminPortal/src/app/productdetails/productlist.component.css
@@ -14,3 +14,11 @@
 .mat-checkbox-layout{
     padding: 10px !important;
 }  
+.bulk-file-input{
+    margin-top: 20px;
+    margin-left: 35px;
+}
+.bulk-file-btn{
+    width: 230px;
+}
+
