bulk upload issue resolve

--- a/AdminPortal/src/app/productdetails/addproduct.component.html
+++ b/AdminPortal/src/app/productdetails/addproduct.component.html
@@ -82,7 +82,7 @@
             <mat-tab label="Bulk Upload">
               <div class="row">
                 <div class="col-md-4">
-                    <input type="file" #fileDocumentInput  class="bulk-file-input" (change)="handleItemDocumentFileInput($event)">
+                    <input type="file" #fileDocListInput  class="bulk-file-input" (change)="handleItemDocumentFileInput($event)">
                 </div>
                 <div class="col-md-2">
                   <button class="btn btn-info pull-right bulk-file-btn" (click)="OnItemDocumentBulkUpload()">Upload Product Document</button>
